[package]
name = "comet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.20"
minigem = { git = "https://github.com/manatriton/minigem" }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
url = "2.2.2"